--- a/site.css
+++ b/site.css
@@ -44,12 +44,15 @@ body {
             box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 10px rgba(0, 0, 0, 0.1) ;
 }
 
-.nav {
+#main-nav {
     text-align:center;
     font: 18px/18px 'CreteRoundRegular', serif;
+    background-color: rgba(255, 210, 31, 0.2);
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
-.nav a, .nav a:visited, .nav a:hover{
+#main-nav a, #main-nav a:visited, #main-nav a:hover{
     color:black;
     text-decoration: none;
     margin-right: 12px;
@@ -58,8 +61,8 @@ body {
     padding-right: 8px;
 }
 
-.nav a:hover {
-    background-color: #F7F7F7;
+#main-nav a:hover {
+    
     color: #008047;
 }
 
