--- a/style.css
+++ b/style.css
@@ -11,33 +11,33 @@ License URI:
 */
 
 @font-face {
-    font-family: 'BebasNeueRegular';
-    src: url('fonts/BebasNeue-webfont.eot');
-    src: url('fonts/BebasNeue-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/BebasNeue-webfont.woff') format('woff'),
-         url('fonts/BebasNeue-webfont.ttf') format('truetype'),
-         url('fonts/BebasNeue-webfont.svg#BebasNeueRegular') format('svg');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'BebasNeueRegular';
+  src: url('fonts/BebasNeue-webfont.eot');
+  src: url('fonts/BebasNeue-webfont.eot?#iefix') format('embedded-opentype'),
+  url('fonts/BebasNeue-webfont.woff') format('woff'),
+  url('fonts/BebasNeue-webfont.ttf') format('truetype'),
+  url('fonts/BebasNeue-webfont.svg#BebasNeueRegular') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
 
 
 @font-face {
-    font-family: 'CreteRoundRegular';
-    src: url('fonts/CreteRound-Regular-webfont.eot');
-    src: url('fonts/CreteRound-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/CreteRound-Regular-webfont.woff') format('woff'),
-         url('fonts/CreteRound-Regular-webfont.ttf') format('truetype'),
-         url('fonts/CreteRound-Regular-webfont.svg#CreteRoundRegular') format('svg');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'CreteRoundRegular';
+  src: url('fonts/CreteRound-Regular-webfont.eot');
+  src: url('fonts/CreteRound-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+  url('fonts/CreteRound-Regular-webfont.woff') format('woff'),
+  url('fonts/CreteRound-Regular-webfont.ttf') format('truetype'),
+  url('fonts/CreteRound-Regular-webfont.svg#CreteRoundRegular') format('svg');
+  font-weight: normal;
+  font-style: normal;
 
 }
 
 body {
-	padding-top: 20px;
-	padding-bottom: 40px;
-    background: url('img/brillant.png') repeat;
+  padding-top: 20px;
+  padding-bottom: 40px;
+  background: url('img/brillant.png') repeat;
 }
 
 footer {
@@ -45,43 +45,43 @@ footer {
 }
 
 .wrapper {
-    width: 950px;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    padding: 1em; 
-    background: #fff;
-    -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 10px rgba(0, 0, 0, 0.1);
-       -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 10px rgba(0, 0, 0, 0.1);
-            box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 950px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  padding: 1em; 
+  background: #fff;
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 10px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 #main-nav {
-    text-align:center;
-    font: 18px/18px 'CreteRoundRegular', serif;
-    background-color: rgba(255, 210, 31, 0.2);
+  text-align:center;
+  font: 18px/18px 'CreteRoundRegular', serif;
+  background-color: rgba(255, 210, 31, 0.2);
 }
 
 #main-nav ul.nav {
-    padding: 0;
-    margin: auto;
-    display: inline-block;
+  padding: 0;
+  margin: auto;
+  display: inline-block;
 }
 
 #main-nav a, #main-nav a:visited, #main-nav a:hover{
-    color:black;
-    text-decoration: none;
-    margin-right: 12px;
-    margin-left: 12px;
-    padding-left: 8px;
-    padding-right: 8px;
+  color:black;
+  text-decoration: none;
+  margin-right: 12px;
+  margin-left: 12px;
+  padding-left: 8px;
+  padding-right: 8px;
 }
 
 
 #main-nav .nav-pills > .active > a,
 #main-nav .nav-pills > .active > a:hover {
-    color: #008047;
-    background-color: transparent;
+  color: #008047;
+  background-color: transparent;
 }
 
 #main-nav .nav > li > a:hover {
@@ -90,60 +90,60 @@ footer {
 }
 
 #main-nav .nav-pills > .active > a {
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    border-radius: 0
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0
 }
- 
+
 .wrapper:before,
 .wrapper:after {
-    content:"";
-    position:absolute; 
-    z-index:-2;
+  content:"";
+  position:absolute; 
+  z-index:-2;
 }
 
 .curved::before {
-    top: 0;
-    bottom: 0;
-    left: 10px;
-    right: 10px;
-    -moz-border-radius: 100px / 10px;
-         border-radius: 100px / 10px;
-    
-    -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 1);
-       -moz-box-shadow: 0 0 15px rgba(0,0,0, 1);
-            box-shadow: 0 0 15px rgba(0, 0, 0, 1);
+  top: 0;
+  bottom: 0;
+  left: 10px;
+  right: 10px;
+  -moz-border-radius: 100px / 10px;
+  border-radius: 100px / 10px;
+
+  -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 1);
+  -moz-box-shadow: 0 0 15px rgba(0,0,0, 1);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 1);
 }
- 
+
 .lifted:before,
 .lifted:after { 
-    top:15px;
-    left:10px;
-    width:50%;
-    height:20%;
-    max-width:300px;
-    -webkit-box-shadow:0 -15px 10px rgba(0, 0, 0, 0.7);   
-       -moz-box-shadow:0 -15px 10px rgba(0, 0, 0, 0.7);
-            box-shadow:0 -15px 10px rgba(0, 0, 0, 0.7);
-    -webkit-transform:rotate(3deg);    
-       -moz-transform:rotate(3deg);   
-        -ms-transform:rotate(3deg);   
-         -o-transform:rotate(3deg);
-            transform:rotate(3deg);
+  top:15px;
+  left:10px;
+  width:50%;
+  height:20%;
+  max-width:300px;
+  -webkit-box-shadow:0 -15px 10px rgba(0, 0, 0, 0.7);   
+  -moz-box-shadow:0 -15px 10px rgba(0, 0, 0, 0.7);
+  box-shadow:0 -15px 10px rgba(0, 0, 0, 0.7);
+  -webkit-transform:rotate(3deg);    
+  -moz-transform:rotate(3deg);   
+  -ms-transform:rotate(3deg);   
+  -o-transform:rotate(3deg);
+  transform:rotate(3deg);
 }
- 
+
 .lifted:after {
-    right:10px; 
-    left:auto;
-    -webkit-transform:rotate(-3deg);   
-       -moz-transform:rotate(-3deg);  
-        -ms-transform:rotate(-3deg);  
-         -o-transform:rotate(-3deg);
-            transform:rotate(-3deg);
+  right:10px; 
+  left:auto;
+  -webkit-transform:rotate(-3deg);   
+  -moz-transform:rotate(-3deg);  
+  -ms-transform:rotate(-3deg);  
+  -o-transform:rotate(-3deg);
+  transform:rotate(-3deg);
 }
 
 .title-unit {
-	text-align: center;
+  text-align: center;
 }
 
 h1.site-title {
@@ -158,13 +158,69 @@ h1.site-title a, h1.site-title a:hover {
 }
 
 .site-subtitle {
-	font: 16px/14px 'CreteRoundRegular', serif;
-	color: gray;
-	margin-top: 0;
+  font: 16px/14px 'CreteRoundRegular', serif;
+  color: gray;
+  margin-top: 0;
 }
 
 .widget-row h3 {
-    padding-bottom: 6px;
-    font: 16px/14px 'CreteRoundRegular', serif;
-    border-bottom: 1px solid #CCC;
+  padding-bottom: 6px;
+  font: 16px/14px 'CreteRoundRegular', serif;
+  border-bottom: 1px solid #CCC;
+}
+
+.badge a, .badge a:hover {
+  color: white;
+  text-decoration: none;
+}
+
+.badge-gf {
+  background-color: #F89406;
+}
+
+.badge-vegan {
+  background-color: #468847;
+}
+
+
+h1.category-title {
+  font: 34px/34px 'BebasNeueRegular', Arial, sans-serif;
+  color: #FF2B06;
+}
+
+.post h1 {
+  margin: 0;
+}
+
+.post h1 a.post-title, .post h3 a.post-title:hover {
+  text-decoration: none;
+  color: black;
+  font: 20px/20px 'CreteRoundRegular', serif;
+}
+
+.post h3 {
+  font: 16px/16px 'CreteRoundRegular', serif;
+  margin: 10px 0;
+}
+
+.post .alignright {
+  float:right;
+  margin-left:10px;
+}
+.post .alignleft {
+  float:left;
+  margin-right:10px;
+}
+.post .aligncenter {
+  margin:0 auto;
+  display:block;
+}
+.post .wp-caption {
+  background: #F7F7F7;
+  border: 1px solid #CCC;
+  text-align: center;
+  padding: 5px 0 0;
+}
+.post .wp-caption p {
+  margin: 0;
 }
