--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ h1.site-title a, h1.site-title a:hover {
 }
 
 
-h1.category-title {
+h1.category-title, h1.tag-title {
   font: 34px/34px 'BebasNeueRegular', Arial, sans-serif;
   color: #FF2B06;
 }
